<resources>
    <string name="app_name">GBCamera Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GBCamera Manager</string>
    <string name="nav_header_subtitle">Github</string>
    <string name="nav_header_wiki">Wiki</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_palettes">Palettes</string>
    <string name="menu_frames">Frames</string>
    <string name="menu_import">Import</string>
    <string name="menu_usbserial">USB Serial</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_show_palettes">Show palettes</string>
    <string name="btn_show_frames">Show frames</string>
    <string name="cb_keep_frame">Keep frame color</string>
    <string name="cb_crop">Crop</string>
    <string name="toast_printing">Printing, please wait...</string>
    <string name="toast_saved">SAVED</string>
    <string name="toast_saved_txt">Saved as TXT</string>
    <string name="loading">Loading...</string>
    <string name="total_images">Total of images:\u0020</string>
    <string name="no_images">No images in the gallery. Go to Import tab</string>
    <string name="export_txt">Export as TXT.</string>
    <string name="export_png">Export as PNG.</string>
    <string name="png_size">PNG size:\u0020</string>
    <string name="images_page">Select images per page:\u0020</string>
    <string name="language">Language (needs restart):\u0020</string>
    <string name="cant_delete_base">Can\'t delete a base frame</string>
    <string name="delete_frame_dialog">Delete frame\u0020</string>
    <string name="sure_dialog">Are you sure?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="frames_total">Total frames:\u0020</string>
    <string name="btn_add_palette">Add palette</string>
    <string name="btn_export_json">Export Json</string>
    <string name="long_press_delete_palette">Long press to delete</string>
    <string name="cant_delete_base_palette">Can\'t delete a base palette</string>
    <string name="toast_palettes_json">Palettes Json saved.</string>
    <string name="set_palette_name">*Set Palette Name*</string>
    <string name="sure_dialog_palette">Are you sure?\nDoing a Json export is recommended before continuing.</string>
    <string name="delete_dialog_palette">Delete palette\u0020</string>
    <string name="choose_color">Choose color</string>
    <string name="selected_color">Selected Color: #</string>
    <string name="toast_palettes_error">2 palettes can\'t have the same id.</string>
    <string name="palette_added">Palette added</string>
    <string name="btn_save">Save</string>
    <string name="btn_decode">Decode</string>
    <string name="btn_select_file">Select file</string>
    <string name="tv_select_file">Select a file to import</string>
    <string name="btn_extract_file">Extract file</string>
    <string name="btn_add_images">Add images</string>
    <string name="btn_add_palettes">Add palettes</string>
    <string name="btn_add_frames">Add frames</string>
    <string name="no_valid_list">Not a valid list</string>
    <string name="images_available">\u0020images available.</string>
    <string name="no_new_palettes">No new palettes added.</string>
    <string name="no_new_frames">No new frames added.</string>
    <string name="no_new_images">No new images added.</string>
    <string name="images_added">Images added:\u0020</string>
    <string name="done_adding_images">\u0020images added!</string>
    <string name="palettes_added">Palettes added.</string>
    <string name="done_adding_palettes">Done adding palettes!</string>
    <string name="frames_added">Frames added.</string>
    <string name="done_adding_frames">Done adding frames!</string>
    <string name="no_valid_file">Not a valid file.</string>
    <string name="cb_last_seen">Last seen.</string>
    <string name="cb_deleted_images">Deleted images.</string>
    <string name="rb_print">Print to Arduino - GBP</string>
    <string name="btn_read_rom_name">Read Rom Name</string>
    <string name="btn_read_ram">Read and Save Ram</string>
    <string name="btn_dump_photo">Dump Full PHOTO! ROM</string>
    <string name="btn_view_rom_images">View ROM images</string>
    <string name="btn_print_banner">Print test banner</string>
    <string name="btn_print_image">Print image</string>
    <string name="btn_delete_sav">Delete SAV</string>
    <string name="tv_sleep_time">Choose sleep time:\u0020</string>
    <string name="error_print_image">Error in PRINT IMAGE</string>
    <string name="delete_sav_dialog">Delete sav?</string>
    <string name="sure_delete_sav">Are you sure to delete\u0020</string>
    <string name="toast_sav_deleted">SAV deleted.</string>
    <string name="toast_couldnt_delete_sav">Couldn\'t delete SAV.</string>
    <string name="deleted_sav">Deleted\u0020</string>
    <string name="tv_connected">//Connected\n</string>
    <string name="error_arduino">Error in Arduino\n.</string>
    <string name="arduino_mode">Arduino Printer Emulator MODE</string>
    <string name="print_mode">PRINT MODE</string>
    <string name="gbxcart_mode">GBxCart Reader MODE</string>
    <string name="images_list">\nImages in the list:\u0020</string>
    <string name="no_good_dump">\nNOT A GOOD SAVE DUMP.</string>
    <string name="sav_parts">\nSav parts:\u0020</string>
    <string name="rom_name">\nThe ROM name is:\u0020</string>
    <string name="dumping_rom_wait">\nDumping 1MB ROM, please wait about 45 seconds...</string>
    <string name="dumping_ram_wait">\nDumping RAM, please wait...\n...</string>
    <string name="last_sav_name">\nThe name of the last SAV file is:\u0020</string>
    <string name="size">Size:\u0020</string>
    <string name="error_file">Error making file:\u0020</string>
    <string name="saved_to_file">Saved to file</string>
    <string name="delete_dialog_gallery">Delete image\u0020</string>
    <string name="menu_savmanager">Save manager</string>
    <string name="file_name">Name of file:\u0020</string>
    <string name="paperize_settings">Show Paperize button</string>
    <string name="paperize_button">Paperize</string>
    <string name="saved_paperized_toast">Saved Paperized!</string>
    <string name="showPrint">Show Print button.</string>
    <string name="permissions_toast">Granted permissions.</string>
    <string name="no_favorites">No favorites</string>
    <string name="edit_selected_item">Edit selected</string>
    <string name="filter_favorites_item">Filter favorites</string>
    <string name="remove_filter_item">Remove filter</string>
    <string name="average_item">Average</string>
    <string name="animate_item">Animate</string>
    <string name="json_backup_item">JSON Backup</string>
    <string name="dialog_close_button">Close</string>
    <string name="select_minimum_toast">Select at least 2 images</string>
    <string name="unselect_all_toast">Unselect all before filtering</string>
    <string name="delete_all_title">Delete selected images?</string>
    <string name="no_selected">No images selected</string>
    <string name="json_backup_saved">JSON Backup saved!</string>
    <string name="page_selector_dialog">Select page</string>
    <string name="sizes_exception">All images must have the same size.</string>
    <string name="save_location_hint">PNGs, HDRs and GIFs are saved into \n\u0020 Pictures/GBCamera Manager. \nOther files are stored in \n\u0020 Download/GBCamera Manager.</string>
    <string name="done_dumping_ram">DONE DUMPING RAM! Check your Download/GBCamera Manager/Save dumps folder</string>
    <string name="done_dumping_photo">DONE DUMPING PHOTO ROM! Check your Download/GBCamera Manager/PHOTO Rom Dumps folder</string>
    <string name="filtered_images">Filtered images:\u0020</string>
    <string name="selected_images">Selected:\u0020</string>
    <string name="analyzing">Analyzing, please wait...</string>
    <string name="done_analyzing">Finished analyzing!</string>
    <string name="check_magic">Check for valid .sav when importing/extracting</string>
    <string name="delete_photo_folder_dialog">Delete Photo rom folder?</string>
    <string name="add_as_frame">Add as frame</string>
    <string name="rotation_button">Show Rotation button</string>
    <string name="frame_name">Set frame name</string>
    <string name="cant_add_frame">Can\'t add this image as a frame</string>
    <string name="no_empty_frame_name">Id must not be empty</string>
    <string name="no_spaces_frame_name">Name must not contain empty spaces</string>
    <string name="frame_name_exists">This frame name already exists</string>
    <string name="no_valid_image_file">Not a valid image file</string>
    <string name="invalid_transparent_image">Image has transparency and can\'t be added</string>
    <string name="delete_folder">Delete folder</string>
    <string name="images">images.</string>
    <string name="only_image_paper">Only image</string>
    <string name="print_paper_btn">Print</string>
    <string name="custom_paper_color">Custom Paper color:</string>
    <string name="collage">Collage</string>
    <string name="collage_too_many_images">Too many images selected. Collage will fail.</string>
    <string name="square_download">Export square image</string>
    <string name="toast_frames_json">Frames Json saved.</string>
    <string name="import_valid_images">Please, select only valid image formats (.jpg, .jpeg, .png, .bmp).</string>
    <string name="no_filtered_images">No available filtered images</string>
    <string name="tags_dialog_title">Filter tags</string>
    <string name="tags_dialog_clear">Clear</string>
    <string name="sort_by_date">By creation date</string>
    <string name="sort_by_import_date">By import date</string>
    <string name="sort_by_title">By title</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="rb_edit_tags">Tags</string>
    <string name="rb_misc">Misc.</string>
    <string name="btn_update_image">Update image</string>
    <string name="et_write_tag">Write tag:\u0020</string>
    <string name="menu_filter">Filter by tag</string>
    <string name="menu_sort">Sort</string>
    <string name="et_frame_group_name">Set frame group name</string>
    <string name="tv_frame_index">Frame index:\u0020</string>
    <string name="et_frame_index_error">Value must be between 1 and 99</string>
    <string name="et_frame_id_error">Already existing frame id</string>
    <string name="et_frame_group_id_error">Only lowercase allowed, min 2 char</string>
    <string name="sp_all_frame_groups">All frames</string>
    <string name="cb_use_mod_date">Use modification date</string>
    <string name="btn_backup_db">Backup Database</string>
    <string name="btn_restore_db">Restore Database</string>
    <string name="toast_backup_db">Database backup finished</string>
    <string name="toast_restore_db">Database restore finished</string>
    <string name="dialog_restore_db_title">Select database to restore</string>
    <string name="dialog_confirm_restore_db">Restoring a database will reset all settings.\nMaking a database backup and Json exports is recommended.\nApp will reset.\nAre you sure? </string>
    <string name="as_imported_frame">As imported</string>
    <string name="btn_export_current_framegroup">Export Group</string>
    <string name="btn_edit_current_framegroup">Rename Group</string>
    <string name="et_palette_id">*Set Palette Id*</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="menu_extra_gallery">Extra gallery</string>
    <string name="action_toggle_info">Toggle info</string>
    <string name="menu_fusion">Fusion</string>
</resources>