<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_extra_gallery"
            android:icon="@drawable/ic_extra_gallery"
            android:title="@string/menu_extra_gallery" />
        <item
            android:id="@+id/nav_palettes"
            android:icon="@drawable/ic_palette"
            android:title="@string/menu_palettes" />
        <item
            android:id="@+id/nav_frames"
            android:icon="@drawable/ic_frame"
            android:title="@string/menu_frames" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_import"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_usbserial"
            android:icon="@drawable/ic_usb"
            android:title="@string/menu_usbserial" />
        <item
            android:id="@+id/nav_savmanager"
            android:icon="@drawable/ic_save_manager"
            android:title="@string/menu_savmanager" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>