<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery"><!-- This selects the default fragment to show when starting the app-->

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mraulio.gbcameramanager.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mraulio.gbcameramanager.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_palettes"
        android:name="com.mraulio.gbcameramanager.ui.palettes.PalettesFragment"
        android:label="@string/menu_palettes"
        tools:layout="@layout/fragment_slideshow" />
</navigation>