<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spFrameGroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView
            android:id="@+id/etFrameId"
            android:hint="Write frame group name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeTextType="uniform"
            android:completionThreshold="1"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20dp"></AutoCompleteTextView>

        <EditText
            android:id="@+id/etFrameGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_frame_group_name"
            android:singleLine="true" />
        <EditText
            android:id="@+id/etFrameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frame_name"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/ivFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@color/imageview_bg"
            android:padding="5dp"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/btnSaveFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_add_frames" />
    </LinearLayout>
</ScrollView>